--- a/studycase/src/App.css
+++ b/studycase/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+html{
+  background-color: #E5E4E2;
+  color: #357EC7;
+  padding: 10px;
+  margin: 10px;
+}
+button {
+  color: #357EC7;
+  width: 200px;
+  height: 30px;
+  margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+table,th,td{
+  padding: 5px;
+  border: 1px solid black;
+}
+td{
+ padding: 10px;
+}
+.input{
+ 
+  align-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tabel-none{
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-none{
+  display: none;
 }
